# gitlab-hook-deploy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
