[package]
name = "gitlab-hook-deploy"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
env_logger = "0.7.1"
serde_json = "1.0.41"
